[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/effect/light.png" type="Texture" id=1]
[ext_resource path="res://scripts/enviroments/item.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 8.0

[sub_resource type="CircleShape2D" id=2]
radius = 16.0

[node name="Item" type="RigidBody2D"]
collision_layer = 0
script = ExtResource( 2 )

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Texture" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )

[node name="InteractionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="Collision" type="CollisionShape2D" parent="InteractionArea"]
shape = SubResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="Light" type="Light2D" parent="."]
texture = ExtResource( 1 )
texture_scale = 0.2
color = Color( 2, 1, 1, 1 )
energy = 0.5

[node name="ItemName" type="Label" parent="."]
margin_left = -20.0
margin_top = -33.0
margin_right = 20.0
margin_bottom = -19.0
rect_clip_content = true
text = "Foo"
align = 1

[connection signal="body_entered" from="InteractionArea" to="." method="_on_InteractionArea_body_entered"]
[connection signal="body_exited" from="InteractionArea" to="." method="_on_InteractionArea_body_exited"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
